tests/fixtures/invalid/int_lshift_dict.py
# Cannot left shift Int and Dict[str, int]
x: int = 1 << {"a": 1}
